# MLOps_Labs

./: pyproject.toml
lab01/: lab01a_01_tensor_tutorial.ipynb  lab01a_02_autograd_tutorial.ipynb  lab01a_03_neural_networks_tutorial.ipynb  lab01a_04_cifar10_tutorial.ipynb  lab01b.ipynb  lab01c.ipynb
lab02/snippets/: chatbot.py
lab04/pytest/: test_answer.py
